openafs (1.4.4.dfsg1-5) UNRELEASED; urgency=low

  * Fix a typo in debian/kern-sysname that caused openafs-modules-source
    to still assume all ia64 systems used Linux 2.4.  Thanks, Jakob
    Haufe.  (Closes: #432344)
  * Use LSB logging functions for openafs-fileserver and support passing
    arguments to bosserver in /etc/default/openafs-fileserver by setting
    DAEMON_ARGS.
  * Clean up more completely after a purge of openafs-fileserver.  Remove
    the files created by the server in /var/lib/openafs/local, remove
    KeyFile and CellServDB.old from /etc/openafs/server, and remove
    BosConfig from /etc/openafs.

 -- Russ Allbery <rra@debian.org>  Mon, 09 Jul 2007 08:28:01 -0700

openafs (1.4.4.dfsg1-4) unstable; urgency=low

  * Apply upstream patch from Jeffrey Hutzelman to fix kernel module
    builds on ppc64.  (Closes: #427555)
  * Apply upstream patches for Linux 2.6.22 support.  (Closes: #428401)
  * Apply upstream patch to fix the AFS /proc structure under Linux
    2.6.22.1 and later.
  * Move /etc/openafs/server-local to /var/lib/openafs/local.  Most of the
    files here are automatically generated and hence not configuration
    files, and the file server has to write to this directory to start (so
    having it in /etc breaks read-only / file systems).  Thanks, Alexei
    Sheplyakov.  (Closes: #405697)
  * Move upserver and upclient to /usr/lib/openafs (from /usr/sbin) to
    match upstream's layout and for consistency with the other servers run
    via bosserver.
  * Use --name instead of --exec in the openafs-fileserver init script and
    drop the --pidfile option (bosserver doesn't create a PID file) so
    that we don't start a second bosserver on upgrades.
  * Go back to using krb5-config.  The dependency problem has now been
    fixed on all platforms in the krb5 package and this is the preferred
    upstream method.

 -- Russ Allbery <rra@debian.org>  Thu, 21 Jun 2007 03:02:32 -0700

openafs (1.4.4.dfsg1-3) unstable; urgency=low
