@@ -20,7 +20,10 @@
 typedef unsigned char des_cblock[8];	/* crypto-block size */
 /* Key schedule */
 typedef struct des_ks_struct {
-    des_cblock _;
+    union {
+        afs_uint32 i[2];
+        des_cblock _;
+    } _;
 } des_key_schedule[16];
 
 #define DES_KEY_SZ 	(sizeof(des_cblock))
