@@ -1,5 +1,8 @@
 openafs (1.4.4.dfsg1-5) UNRELEASED; urgency=low
 
+  * Add a union to des_ks_struct and reorder includes to get the correct
+    alignment for DES code on SPARC.  Thanks, Chaskiel Grundman.  Partly
+    addresses #415952.
   * Fix a typo in debian/kern-sysname that caused openafs-modules-source
     to still assume all ia64 systems used Linux 2.4.  Thanks, Jakob
     Haufe.  (Closes: #432344)
@@ -11,7 +14,7 @@ openafs (1.4.4.dfsg1-5) UNRELEASED; urgency=low
     KeyFile and CellServDB.old from /etc/openafs/server, and remove
     BosConfig from /etc/openafs.
 
- -- Russ Allbery <rra@debian.org>  Mon, 09 Jul 2007 08:28:01 -0700
+ -- Russ Allbery <rra@debian.org>  Mon, 16 Jul 2007 11:48:32 -0700
 
 openafs (1.4.4.dfsg1-4) unstable; urgency=low
 
